Group pics and text to correctly align them

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -10,6 +10,20 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin-bottom: 32px;
+}
+
+.pics {
+  display: flex;
+  gap: 52px;
+  justify-content: center;
+}
+
+.one, .two, .three, .four {
+  display: inline;
+  text-align: center;
+  width: 200px;
 }
 
 /* do not edit this footer */
